Left right image cropping on mobile fix

--- a/mobile_style.css
+++ b/mobile_style.css
@@ -224,6 +224,7 @@
   .left > img,
   .right > img {
     width: 100%;
+    height: 100%;
     margin-bottom: 5vh;
   }
 
